[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tangle-md2tex"
version = "0.1.0"
description = "Extract LaTeX fenced blocks from literate Markdown files."
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "yindaheng98", email = "yindaheng98@gmail.com" }]
dependencies = ["markdown-it-py>=4.2.0"]

[project.urls]
Homepage = "https://github.com/yindaheng98/tangle-md2tex"
Repository = "https://github.com/yindaheng98/tangle-md2tex"

[project.scripts]
tanglemd2tex = "tanglemd2tex.cli:main"

[tool.setuptools.packages.find]
include = ["tanglemd2tex*"]
